[project]
name = "streak_saver"
version = "0.1.10"
description = "CLI app that automatically messages your friends on the tik tok and saves your streak."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.58.0",
    "typer>=0.24.1",
    "pyautostart>=0.1.2"
]

[project.scripts]
streak-saver = "streak_saver.main:app"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"